--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "@babel/runtime": "^7.0.0-beta.38",
     "babel-runtime": "^6.26.0",
     "chart.js": "^2.7.1",
+    "fs": "0.0.1-security",
+    "ganache-cli": "^6.0.3",
     "meteor-node-stubs": "^0.3.2",
     "twitter": "^1.7.1",
     "twitter-node-client": "0.0.6",
